# thingset-device-library

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  genindex.html  index.html  library.json  objects.inv  platformio.ini  search.html  searchindex.js
.github/workflows/: platformio.yml
_sources/src/api/: internal.rst.txt  library.rst.txt
_sources/src/dev/: unit_tests.rst.txt  usage.rst.txt
apps/shell/: ts_shell.c  ts_shell.h  ts_shell_abuf.c  ts_shell_abuf.h  ts_shell_g.c  ts_shell_g.h
docs/: Doxyfile  conf.py  index.rst
docs/src/: features.rst
examples/basic/: CMakeLists.txt  main.c
examples/interactive/: CMakeLists.txt  main.cpp  things.c  things.h
examples/interactive/linenoise/: README.markdown
examples/interactive_com/: main.c
lib/: .clang-format
native/apps/shell/: CMakeLists.txt
native/examples/basic/: CMakeLists.txt  config.h
native/examples/interactive/: CMakeLists.txt  config.h
native/examples/interactive_com/: CMakeLists.txt  config.h
native/tests/: CMakeLists.txt  config.h  test_impl.c
native/thingset/: ts_impl_buf.c  ts_impl_buf.h  ts_impl_bufq.c  ts_impl_bufq.h  ts_impl_endian.h  ts_impl_env.h  ts_impl_libc.c  ts_impl_log.h  ts_impl_macro.h  ts_impl_mem.h  ts_impl_shell.c  ts_impl_shell.h  ts_impl_shell_linenoise.c  ts_impl_shell_linenoise.h  ts_impl_time.h
src/: CMakeLists.txt  cbor.c  cbor.h  features.html  jsmn.h  main.cpp  thingset.c  thingset.cpp  thingset.h  thingset_app.h  thingset_bin.c  thingset_bin.cpp  thingset_can.cpp  thingset_can.h  thingset_canmsg.cpp  thingset_cbor.c  thingset_cbor.cpp  thingset_cpp.h  thingset_ctx.h  thingset_env.h  thingset_json.c  thingset_json.cpp  thingset_msg.h  thingset_obj.h  thingset_port.h  thingset_priv.h  thingset_rbbq.h  thingset_time.h  thingset_txt.c  thingset_txt.cpp  ts_app.c  ts_app.h  ts_buf.h  ts_bufq.h  ts_cobs.c  ts_cobs.h  ts_config.h  ts_ctx.c  ts_ctx.h  ts_ctx_cmd.c  (+27 more)
src/api/: internal.html  library.html
src/dev/: unit_tests.html  usage.html
src/ports/loopback_simple/: CMakeLists.txt  loopback_simple.c  loopback_simple.h
test/: binary_mode.cpp  common.cpp  main.cpp  test.h  test_assert.c  test_bin.c  test_buf.c  test_common.c  test_context.c  test_core.c  test_ctx.c  test_data.c  test_data.h  test_jsmn.c  test_msg.c  test_obj.c  test_shell.c  test_shim.cpp  test_support.c  test_time.c  test_txt.c  tests.h  tests_bin.cpp  tests_cbor.cpp  tests_common.cpp  tests_json.cpp  tests_txt.cpp  text_mode.cpp  unittest_transport.cpp  unittest_transport.h
test/thingset/: test_data.h  tests_cbor.h  tests_common.h  tests_json.h  thingset_test.c  thingset_test.cpp
zephyr/: CMakeLists.txt  Kconfig.thingset  Kconfig.thingset_apps  Kconfig.thingset_com  Kconfig.thingset_core  module.yml  thingset_iterables_ram.ld  thingset_iterables_rom.ld  thingset_zephyr.h
zephyr/apps/shell/: CMakeLists.txt  Kconfig
zephyr/examples/basic/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
zephyr/examples/interactive_com/: CMakeLists.txt  prj.conf  sample.yaml
zephyr/examples/interactive_com/src/: main.c
zephyr/libc/minimal/: extensions.c
zephyr/tests/: CMakeLists.txt  Kconfig  README.md  README.txt  prj.conf  test_impl.c
zephyr/tests/src/: main.c
zephyr/thingset/: ts_impl_buf.c  ts_impl_buf.h  ts_impl_bufq.h  ts_impl_endian.h  ts_impl_env.h  ts_impl_libc_minimal.c  ts_impl_log.c  ts_impl_log.h  ts_impl_macro.h  ts_impl_mem.h  ts_impl_shell.c  ts_impl_shell.h  ts_impl_time.h  ts_impl_unity.h
zephyr/ztest/: ztest_unity.h
